styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    background: linear-gradient(to bottom right, rgb(20, 20, 126), rgb(65, 3, 65));
}

html {
    font-size: 62.5%;
}

#container {
    background-color: white;
    width: 470px;
    height: 570px;
    border-radius: 20px;
    padding: 15px 20px;
    font-family: 'Roboto', sans-serif;
}

h1 {
    font-size: 4rem;
    color:rgb(7, 7, 63);
}

#input-btn-div {
    margin-top: 30px;
    margin-bottom: 25px;
}

.task-div {
    margin-left: 5px;
    margin-top: 20px;
    position: relative;
}

.checkbox {
    transform: scale(1.65);
    border: none;
    outline: none;
    margin-right: 18px;
}

.text-label {
    font-size: 1.8rem;
}

.delete-btn {
    position: absolute;
    right: 10px;
    transform: scale(1.65);
    border: none;
    background-color: white;
    transition: transform 0.5s ease;
}

.delete-btn:hover {
    transform: scale(2.4);
}

#new-task-input {
    height: 40px;
    width: 300px;
    padding: 15px 10px;
    font-family: 'Roboto', sans-serif;
    font-weight: 300;
    font-size: 1.5rem;
    border: none;
    outline: none;
    border-radius: 10px;
    background-color: rgb(230, 221, 221);
}

#add-task-btn {
    height: 40px;
    width: 65px;
    margin-left: 4px;
    border: none;
    border-radius: 7px;
    background-color: rgb(248, 115, 38);
    transition: transform 0.5s ease;
}

#add-task-btn:hover {
    transform: scale(1.1)
}

#add-task-btn:active {
    background-color: rgba(248, 115, 38, 0.8);
}

.line-through {
    text-decoration: line-through;
}

